--- a/ci-operator/config/windup/windup-ui-tests/windup-windup-ui-tests-main__image-hack.yaml
+++ b/ci-operator/config/windup/windup-ui-tests/windup-windup-ui-tests-main__image-hack.yaml
@@ -6,7 +6,7 @@ build_root:
 images:
 - context_dir: .
   dockerfile_path: dockerfiles/interop/Dockerfile
-  to: mtr-runner
+  to: mtr-runner-test
 releases:
   latest:
     candidate:
